remove obsolete code from tools
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>